--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/app_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -17,9 +17,24 @@
         </activity>
         <activity
             android:name=".OurTeam"
-            android:parentActivityName=".EducationHunt" />
+            android:parentActivityName=".EduHunt"
+            android:theme="@style/AppTheme1" />
+        <activity android:name=".EduHunt" />
         <activity
-            android:name=".EduHunt">
+            android:name=".School"
+            android:theme="@style/AppTheme1"/>
+        <activity
+            android:name=".College"
+            android:parentActivityName=".EduHunt"
+            android:theme="@style/AppTheme1"/>
+        <activity
+            android:name=".University"
+            android:parentActivityName=".EduHunt"
+            android:theme="@style/AppTheme1"/>
+        <activity
+            android:name=".Bookmark"
+            android:parentActivityName=".EduHunt"
+            android:theme="@style/AppTheme1">
 
         </activity>
     </application>
