--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.user.educationhunt">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/app_icon"
@@ -22,18 +24,34 @@
         <activity android:name=".EduHunt" />
         <activity
             android:name=".School"
-            android:theme="@style/AppTheme1"/>
+            android:theme="@style/AppTheme1" />
         <activity
             android:name=".College"
             android:parentActivityName=".EduHunt"
-            android:theme="@style/AppTheme1"/>
+            android:theme="@style/AppTheme1" />
         <activity
             android:name=".University"
             android:parentActivityName=".EduHunt"
-            android:theme="@style/AppTheme1"/>
+            android:theme="@style/AppTheme1" />
         <activity
             android:name=".Bookmark"
             android:parentActivityName=".EduHunt"
+            android:theme="@style/AppTheme1" />
+        <activity
+            android:name=".Terms"
+            android:theme="@style/AppTheme1" />
+        <activity
+            android:name=".Privacy"
+            android:theme="@style/AppTheme1" />
+        <activity
+            android:name=".Help"
+            android:theme="@style/AppTheme1" />
+        <activity
+            android:name=".Info"
+            android:theme="@style/AppTheme1"></activity>
+        <activity
+            android:name=".Website"
+            android:parentActivityName=".Info"
             android:theme="@style/AppTheme1">
 
         </activity>
