--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,14 +2,32 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.user.educationhunt">
 
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
+
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+    <permission
+        android:name="com.example.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
+    <uses-permission android:name="com.example.permission.MAPS_RECEIVE" />
 
     <application
+        android:name=".pojos.AppController"
         android:allowBackup="true"
         android:icon="@mipmap/app_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyD-r0k4mQaiOfz1V21KU8nQhosYai34BM8	" />
+
         <activity android:name=".Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,11 +35,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".EduHunt" />
         <activity
             android:name=".OurTeam"
             android:parentActivityName=".EduHunt"
             android:theme="@style/AppTheme1" />
-        <activity android:name=".EduHunt" />
         <activity
             android:name=".School"
             android:theme="@style/AppTheme1" />
@@ -55,17 +74,30 @@
             android:theme="@style/AppTheme1" />
         <activity
             android:name=".SchoolRegistration"
-            android:theme="@style/AppTheme1" />
+            android:theme="@style/AppTheme1"
+            android:windowSoftInputMode="stateHidden">
+
+        </activity>
         <activity
             android:name=".CollegeRegistration"
-            android:theme="@style/AppTheme1" />
+            android:theme="@style/AppTheme1"
+            android:windowSoftInputMode="stateHidden">
+        </activity>
         <activity
             android:name=".UniversityRegistration"
-            android:theme="@style/AppTheme1"></activity>
+            android:theme="@style/AppTheme1"
+            android:windowSoftInputMode="stateHidden">
+
+        </activity>
         <activity
             android:name=".Feedback"
+            android:parentActivityName=".EduHunt"
             android:theme="@style/AppTheme1"
-            android:parentActivityName=".EduHunt"></activity>
+            android:windowSoftInputMode="stateHidden" />
+        <activity
+            android:name=".SchoolDetails"
+            android:parentActivityName=".School"></activity>
+
     </application>
 
 </manifest>
