--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
     <permission
         android:name="com.example.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
+
     <uses-permission android:name="com.example.permission.MAPS_RECEIVE" />
 
     <application
@@ -23,10 +24,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyD-r0k4mQaiOfz1V21KU8nQhosYai34BM8	" />
+            android:value="AIzaSyD-r0k4mQaiOfz1V21KU8nQhosYai34BM8 " />
 
         <activity android:name=".Splash">
             <intent-filter>
@@ -35,12 +35,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".EduHunt" />
-        <activity
-            android:name=".OurTeam"
-            android:parentActivityName=".EduHunt"
-            android:theme="@style/AppTheme1" />
         <activity
             android:name=".School"
             android:theme="@style/AppTheme1" />
@@ -75,20 +70,15 @@
         <activity
             android:name=".SchoolRegistration"
             android:theme="@style/AppTheme1"
-            android:windowSoftInputMode="stateHidden">
-
-        </activity>
+            android:windowSoftInputMode="stateHidden"></activity>
         <activity
             android:name=".CollegeRegistration"
             android:theme="@style/AppTheme1"
-            android:windowSoftInputMode="stateHidden">
-        </activity>
+            android:windowSoftInputMode="stateHidden"></activity>
         <activity
             android:name=".UniversityRegistration"
             android:theme="@style/AppTheme1"
-            android:windowSoftInputMode="stateHidden">
-
-        </activity>
+            android:windowSoftInputMode="stateHidden"></activity>
         <activity
             android:name=".Feedback"
             android:parentActivityName=".EduHunt"
@@ -96,8 +86,8 @@
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".SchoolDetails"
-            android:parentActivityName=".School"></activity>
-
+            android:parentActivityName=".School" />
+        <activity android:name=".CollegeDetail"></activity>
     </application>
 
 </manifest>
