--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,20 +2,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.user.educationhunt">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
     <uses-feature
         android:glEsVersion="0x00020000"
-        android:required="true" />
-
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+        android:required="true"/>
 
     <permission
         android:name="com.example.permission.MAPS_RECEIVE"
-        android:protectionLevel="signature" />
+        android:protectionLevel="signature"/>
+    <uses-permission android:name="com.example.permission.MAPS_RECEIVE"/>
 
-    <uses-permission android:name="com.example.permission.MAPS_RECEIVE" />
 
     <application
         android:name=".pojos.AppController"
@@ -24,21 +24,26 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyD-r0k4mQaiOfz1V21KU8nQhosYai34BM8 " />
+            android:value="AIzaSyAPf9kPEHTnMpx81uYVMnmONEIEiTRme9I"/>
 
         <activity android:name=".Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".EduHunt" />
         <activity
             android:name=".School"
-            android:theme="@style/AppTheme1" />
+            android:theme="@style/AppTheme1">
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable">
+            </meta-data>
+        </activity>
         <activity
             android:name=".College"
             android:parentActivityName=".EduHunt"
@@ -70,24 +75,24 @@
         <activity
             android:name=".SchoolRegistration"
             android:theme="@style/AppTheme1"
-            android:windowSoftInputMode="stateHidden"></activity>
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".CollegeRegistration"
             android:theme="@style/AppTheme1"
-            android:windowSoftInputMode="stateHidden"></activity>
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".UniversityRegistration"
-            android:theme="@style/AppTheme1"
-            android:windowSoftInputMode="stateHidden"></activity>
-        <activity
-            android:name=".Feedback"
-            android:parentActivityName=".EduHunt"
             android:theme="@style/AppTheme1"
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".SchoolDetails"
             android:parentActivityName=".School" />
-        <activity android:name=".CollegeDetail"></activity>
+        <activity
+            android:name=".CollegeDetail"
+            android:parentActivityName=".College" />
+        <activity
+            android:name=".UniversityDetails"
+            android:parentActivityName=".University"></activity>
     </application>
 
 </manifest>
